fix(md): fix pin icon from cropping due to overflow-x: auto (#9352)

--- a/app/scripts/modules/core/src/managed/versionsHistory/VersionsHistory.less
+++ b/app/scripts/modules/core/src/managed/versionsHistory/VersionsHistory.less
@@ -49,7 +49,7 @@
   .version-environments {
     display: flex;
     flex-direction: row;
-    margin-top: var(--s-spacing);
+    padding-top: var(--m-spacing);
     overflow: auto;
 
     .environment-pinned {
